# organize

./: .dockerignore  .gitignore  .organize.toml.example  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  executor.rs  logging.rs  main.rs  planner.rs  prompt.rs  scanner.rs  tmdb.rs
src/parser/: mod.rs  movie.rs  show.rs  tokens.rs
tests/: e2e.rs
